--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "sourceMap": true,
-        "outDir": "lib"
+        "outDir": "lib",
+        "esModuleInterop": true
     },
     "include": ["src/**/*"]
 }
