--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
         "outDir": "lib",
         "esModuleInterop": true,
         "strict": true,
-        "noImplicitAny": true
+        "noImplicitAny": true,
+        "target": "es2020"
     },
     "include": ["src/**/*"]
 }
