--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "esModuleInterop": true,
         "strict": true,
         "noImplicitAny": true,
-        "target": "es2020"
+        "target": "es2020",
+        "moduleResolution": "node"
     },
     "include": ["src/**/*"]
 }
